--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
 				
 <!-- == Руб / час: == -->							
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Руб / час:</span>
 					</div>		
 					<input type="number" id="rvc" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" step="any" title="" readonly>
 				</div>		
 <!-- == Руб / сутки: == -->				
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Руб / сутки:</span>
 					</div>		
 					<input type="number" id="rvs" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" step="any" title="" readonly>
@@ -225,109 +225,116 @@
 				<br style="line-height:30px;">
 <!-- == Оклад: == -->
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Оклад:</span>
 					</div>		
 					<input type="number" id="okl" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" step="any" title="" readonly>
 				</div>
 <!-- == Двойная (x2): == -->
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Двойная (x2):</span>
 					</div>		
 					<input type="text" id="dvoynaya_text" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>
 <!-- == Дорога в вых == -->
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Дорога в вых:</span>
 					</div>		
 					<input type="number" id="doroga_out" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
 <!-- == Ночь (x0.4): == -->					
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="noch_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Ночь (x0.4):</span>
 					</div>		
 					<input type="number" id="noch" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>					
 				</div>	
 <!-- == Надбавка (x1.25): == -->				
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Надбавка (x1.25):</span>
 					</div>		
 					<input type="number" id="nadbavka" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>		
 <!-- == РК тек): == -->				
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РК тек:</span>
 					</div>		
 					<input type="number" id="rk_tek" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
 <!-- == РкПредМес: == -->						
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="rk_plus_premia_pred_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РкПредМес:</span>
 					</div>		
 					<input type="number" id="rk_premia_pred" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="ПредПремияРК" readonly>
 				</div>	
 <!-- == ПремПредМес: == -->				
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="rk_plus_premia_pred_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">ПремПредМес:</span>
 					</div>		
 					<input type="number" id="premia_pred" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="ПредПремия" readonly>
 				</div>	
 <!-- == РК+ПремПредМес: == -->				
 				<div hidden class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="rk_plus_premia_pred_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РК+ПремПредМес:</span>
 					</div>		
 					<input type="number" id="rk_plus_premia_pred" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>		
 <!-- == ВСЕГО НАЧИСЛЕНО: == -->				
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
-						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">ВСЕГО НАЧИСЛЕНО:</span>
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
+						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;background:yellow;">ВСЕГО НАЧИСЛЕНО:</span>
 					</div>		
-					<input type="number" id="vsego_nachisleno" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
+					<input type="number" id="vsego_nachisleno" class="form-control input-sm" style="text-align:center;background:yellow;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
 				<br style="line-height:30px;">
 <!-- == НалогУдДох13/15%: == -->	
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="ndfl_tek15_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">НалогУдДох:</span>
 					</div>		
 					<input type="number" id="ndfl_tek15" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
 <!-- == НалогУдРК/СН13%: == -->	
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">НалогУдРК/СН13%:</span>
 					</div>		
 					<input type="number" id="ndfl_rk" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
+<!-- == ВСЕГО УДЕРЖАНО: == -->	
+				<div class="input-group">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
+						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;background:yellow;">ВСЕГО УДЕРЖАНО:</span>
+					</div>		
+					<input type="number" id="ndfl_all" class="form-control input-sm" style="text-align:center;background:yellow;padding:0;height:21px;font-size:14px;" title="" readonly>
+				</div>	
 				<br style="line-height:30px;">
 <!-- == Премия: == -->
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="premia_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Премия: --</span>
 					</div>		
 					<input type="number" id="premia_tek" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
-<!-- == РК премии: == -->
+<!-- == РКпрем: == -->
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
-						<span id="rk_premia_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РК премии: --</span>
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
+						<span id="rk_premia_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РКпрем: --</span>
 					</div>		
 					<input type="number" id="rk_premia_tek" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
 				<br style="line-height:30px;">
-<!-- == Заработано за ...: == -->								
+<!-- == Доход за ...: == -->								
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
-						<span class="input-group-text" id="chist_all_text" style="width:100%;font-size:14px;font-weight:bold;">Заработано за ...:</span>
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
+						<span class="input-group-text" id="chist_all_text" style="width:100%;font-size:14px;font-weight:bold;">Доход за ...:</span>
 					</div>		
 					<input type="number" id="chist_bez" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
@@ -353,14 +360,14 @@
 				</div>	
 <!-- == Общее на руки: == -->	
 				<div class="input-group">
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Общее на руки:</span>
 					</div>		
 					<input type="number" id="chist_all" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
 <!-- == Буржуям (Профсоюз): == -->	
 				<div class="input-group" hidden>
-					<div class="input-group-prepend" style="width:60%;padding:0;height:21px;font-weight:bold;">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Буржуям (Профсоюз):</span>
 					</div>		
 					<input type="number" id="profsoyuz" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" title="" readonly>
@@ -368,17 +375,17 @@
 <!-- ==== -->					
 			</div>
 			<br>
-			<div class="form-group" style="font-size:12px;font-weight:bold;">
+			<div class="form-group" style="font-size:10px;font-weight:bold;">
 				<label class="col-sm-12 col-form-label m-0 p-0">РУБ.ЧАС = НОРМ.ОКЛАД / НОРМ.ЧАСЫ</label>
 				<label class="col-sm-12 col-form-label m-0 p-0">ОКЛАД = РУБ.ЧАС * ФАКТ.ОТРАБ.ЧАСЫ</label>						
-				<label class="col-sm-12 col-form-label m-0 p-0">НАДБАВКА = РУБ.ЧАС * КОМАНДИРОВКА * 0.25</label>				
-				<label class="col-sm-12 col-form-label m-0 p-0">ДВОЙНАЯ = РУБ.ЧАС * КОЛ-ВО.ВЫХ.И.ПРАЗД.ЧАСОВ * 2</label>	
-				<label class="col-sm-12 col-form-label m-0 p-0">НОЧНЫЕ = РУБ.ЧАС * НОЧ.ОТРАБ.ЧАСЫ * 0.4</label>	
+				<label class="col-sm-12 col-form-label m-0 p-0">НАДБАВКА(х1.25) = РУБ.ЧАС * КОМАНДИРОВКА * 0.25</label>				
+				<label class="col-sm-12 col-form-label m-0 p-0">ДВОЙНАЯ(х2) = РУБ.ЧАС * КОЛ-ВО.ВЫХ.И.ПРАЗД.ЧАСОВ * 2</label>	
+				<label class="col-sm-12 col-form-label m-0 p-0">НОЧНЫЕ(х0.4) = РУБ.ЧАС * НОЧ.ОТРАБ.ЧАСЫ * 0.4</label>	
 				<label class="col-sm-12 col-form-label m-0 p-0">ПРЕМИЯ = (ОКЛ+НАДБАВКА+ДВОЙНАЯ/2+ДОР_В_ВЫХ+НОЧЬ) * 0.7</label>	
 			</div>				
 			<footer class="footer fixed-bottom">
 				<div class="container">
-					<span style="font-weight:bold;font-size:9px;text-align:left;padding-right:3px;">mustafin.ik@mail.ru</div>	
+					<span style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">mustafin.ik@mail.ru</div>	
 					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 06.10.2025</div>
 				</div> 
 			</footer> 
@@ -663,6 +670,8 @@
 		let ndfl_tek15_115 = parseFloat(parseFloat(summaVseh115) * ndfl_perc.value / 100).toFixed(2);
 		let ndfl_tek15_1530 = parseFloat(parseFloat(summaVseh1530) * ndfl_perc.value / 100).toFixed(2);
 		ndfl_tek15.value = Math.floor((parseFloat(vsego_nachisleno.value) - parseFloat(rk_premia_pred.value) - parseFloat(rk_only)) * ndfl_perc.value / 100); // Округление в меньшую сторону			
+//Расчет НДФЛ ВСЕГО УДЕРЖАНО
+		ndfl_all.value = (parseFloat(ndfl_rk.value) + parseFloat(ndfl_tek15.value)).toFixed(2);
 
 //Расчет текущей премии		
 		premia_tek.value = ((parseFloat(okl.value) + parseFloat(nadbavka.value) + parseFloat(dvoynaya) + parseFloat(doroga_out.value) + parseFloat(noch.value)) * parseFloat(premia.value)).toFixed(2);
@@ -738,7 +747,7 @@
 		
 		premia.value          = premia_ar[sel];	
 		premia_text.innerHTML = "Премия: " + select_m.options[sel].value;		
-		rk_premia_text.innerHTML = "РК премии: " + select_m.options[sel].value;	
+		rk_premia_text.innerHTML = "РКпрем: " + select_m.options[sel].value;	
 		premia_pred.value     = premia_pred_ar[selected];
 		rk_premia_pred.value     = (parseFloat(premia_pred.value) * 0.15).toFixed(2);		
 
@@ -749,7 +758,7 @@
 		//rk_plus_premia_pred_text.innerHTML = "Прем + РК: " + select_m.options[selected].value;
 		ndfl_tek15_text.innerHTML = "НалогУдДох" + ndfl_perc.value + "%:";
 		
-		chist_all_text.innerHTML = "Заработано за " + select_m.options[sel].value + ":";
+		chist_all_text.innerHTML = "Доход за " + select_m.options[sel].value + ":";
 		prof.value         = prof_ar[sel];
 		avans28_text.value = '28 ' + months[sel];
 		raschet13_text.value = '13 ' + months[selected2]; 
