--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 			</div>				
 			<footer class="footer fixed-bottom">
 				<div class="container">
-					<span style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">mustafin.ik@mail.ru</div>	
+					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">mustafin.ik@mail.ru</div>	
 					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 06.10.2025</div>
 				</div> 
 			</footer> 
@@ -871,6 +871,7 @@
 	function handleTouchMove(e) {if (!xDown || !yDown) return;let xUp = e.touches[0].clientX;let yUp = e.touches[0].clientY;xDiff = xDown - xUp;yDiff = yDown - yUp;}
 </script>
 </html>
+
 
 
 
