--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 			<footer class="footer fixed-bottom">
 				<div class="container">
 					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">mustafin.ik@mail.ru</div>	
-					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 26.10.2025</div>
+					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 06.10.2025</div>
 				</div> 
 			</footer> 
 		</div>	
@@ -405,9 +405,10 @@
 	
 	const prazdniki = ['2025-01-01', '2025-01-02', '2025-01-03', '2025-01-04', '2025-01-05', '2025-01-06', '2025-01-07', '2025-01-08',
 			   '2025-02-23', '2025-03-08', '2025-03-30', '2025-03-31', '2025-05-01', '2025-05-02', '2025-05-08', '2025-05-09',
-			   '2025-06-06', '2025-06-12', '2025-06-13', '2025-10-11', '2025-10-13', '2025-11-01', '2025-11-04'];
-	const korotkiy = ['2025-03-07', '2025-04-30', '2025-06-05', '2025-06-11', '2025-10-10', '2025-11-03'];				   
-
+			   '2025-06-06', '2025-06-12', '2025-06-13', '2025-10-11', '2025-10-13', '2025-11-03', '2025-11-04'];
+	const korotkiy = ['2025-03-07', '2025-04-30', '2025-06-05', '2025-06-11', '2025-10-10', '2025-11-01'];				   
+	const rabochiy = ['2025-11-01'];	
+	
 	function calculate(mesto, daty, id_mess, attr_mess) { 
 		var All115 = 0;
 		var Poln115 = 0;
@@ -430,11 +431,34 @@
 			for (let i = 0; i < only_date.length; i++) {
 				dates[i] = new Date(only_date[i]);
 				let den = dates[i].toISOString().substring(0, 10);			
-				if (dates[i].getDate() < 16) { 
-					if (dates[i].getDay() > 0 && dates[i].getDay() < 6) Okl115++;				
-					if (dates[i].getDay() == 0 || dates[i].getDay() == 6) Vyh115++;
-					for (let j = 0; j < prazdniki.length; j++) if (den == prazdniki[j] && dates[i].getDay() > 0 && dates[i].getDay() < 6) Prazd115++;
-					for (let j = 0; j < korotkiy.length; j++) if (den == korotkiy[j]) Sokr115++;
+				
+				if (dates[i].getDate() < 16) {
+					// Если день приходится на 1 - 5
+					if (dates[i].getDay() > 0 && dates[i].getDay() < 6) {
+						Okl115++;
+					}
+					// Если день приходится на 6 - 7
+					if (dates[i].getDay() == 0 || dates[i].getDay() == 6) {
+						for (let j = 0; j < rabochiy.length; j++) {
+							if (den == rabochiy[j]) {
+								Okl115++;
+							} else {
+								Vyh115++;							
+							}
+						}
+					}
+					// Если день приходится на праздник и на 1 - 5
+					for (let j = 0; j < prazdniki.length; j++) {
+						if (den == prazdniki[j] && dates[i].getDay() > 0 && dates[i].getDay() < 6) {
+							Prazd115++;
+						}
+					}
+					// Если день приходится на короткий день
+					for (let j = 0; j < korotkiy.length; j++) {
+						if (den == korotkiy[j]) {
+							Sokr115++;
+						}
+					}
 				} else {
 					if (dates[i].getDay() > 0 && dates[i].getDay() < 6) Okl1530++;				
 					if (dates[i].getDay() == 0 || dates[i].getDay() == 6) Vyh1530++;
@@ -871,18 +895,3 @@
 	function handleTouchMove(e) {if (!xDown || !yDown) return;let xUp = e.touches[0].clientX;let yUp = e.touches[0].clientY;xDiff = xDown - xUp;yDiff = yDown - yUp;}
 </script>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
