--- a/index.html
+++ b/index.html
@@ -338,6 +338,13 @@
 					</div>		
 					<input type="number" id="chist_bez" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
+<!-- == Доход (руб/сутки): == -->	
+				<div class="input-group">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
+						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Доход (руб/сутки):</span>
+					</div>		
+					<input type="number" id="chist_bez_rub_v_sutki" class="form-control input-sm" style="text-align:center;background:white;color:black;padding:0;height:21px;font-size:14px;" title="" readonly>
+				</div>	
 				<br style="line-height:30px;">
 <!-- == Выплата: == -->			
 				<div class="col-6 col-sm-6 col-md-6 col-xl-6 p-0">
@@ -365,6 +372,13 @@
 					</div>		
 					<input type="number" id="chist_all" class="form-control input-sm" style="text-align:center;background:#7FFFD4;color:black;padding:0;height:21px;font-size:14px;" title="" readonly>
 				</div>	
+<!-- == Общее (руб/сутки): == -->	
+				<div class="input-group">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
+						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Общее (руб/сутки):</span>
+					</div>		
+					<input type="number" id="chist_all_rub_v_sutki" class="form-control input-sm" style="text-align:center;background:white;color:black;padding:0;height:21px;font-size:14px;" title="" readonly>
+				</div>	
 <!-- == Буржуям (Профсоюз): == -->	
 				<div class="input-group" hidden>
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
@@ -386,7 +400,7 @@
 			<footer class="footer fixed-bottom">
 				<div class="container">
 					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">mustafin.ik@mail.ru</div>	
-					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 27.10.2025</div>
+					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 31.10.2025</div>
 				</div> 
 			</footer> 
 		</div>	
@@ -545,7 +559,9 @@
 			multiSelect: 999					
 		});	
 	}
-	function getDates() {
+	function getLastDayOfMonth(year, month) {
+	  let date = new Date(year, month + 1, 0);
+	  return date.getDate();
 	}
   	
 	let json_val = [];
@@ -713,7 +729,10 @@
 		chist_all.value = (parseFloat(avans28.value) + parseFloat(raschet13.value)).toFixed(2); 
 		chist_bez.value = (parseFloat(vsego_nachisleno.value) - parseFloat(rk_plus_premia_pred.value) - parseFloat(ndfl_rk.value) - 
 						  parseFloat(ndfl_tek15.value) + parseFloat(premia_tek.value) + parseFloat(rk_premia_tek.value)).toFixed(2);
-		
+
+		let last_day = getLastDayOfMonth(currentYear, select_m.selectedIndex);
+		chist_all_rub_v_sutki.value = (parseFloat(chist_all.value) / last_day).toFixed(2);  		
+		chist_bez_rub_v_sutki.value = (parseFloat(chist_bez.value) / last_day).toFixed(2);  		
 		
 		rvc.value = parseFloat(rub_v_сhas).toFixed(3);
 		rvs.value = parseFloat(rub_v_сhas * 8).toFixed(2);
