--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
 	var	dor1530_rab = 0;
 	var	dor1530_prazd = 0;	
 	
-	const prazdniki = ['2025-01-01', '2025-01-02', '2025-01-03', '2025-01-04', '2025-01-05', '2025-01-06', '2025-01-07', '2025-01-08',
-			   '2025-02-23', '2025-03-08', '2025-03-30', '2025-03-31', '2025-05-01', '2025-05-02', '2025-05-08', '2025-05-09',
-			   '2025-06-06', '2025-06-12', '2025-06-13', '2025-10-11', '2025-10-13', '2025-11-03', '2025-11-04'];
-	const korotkiy = ['2025-03-07', '2025-04-30', '2025-06-05', '2025-06-11', '2025-10-10', '2025-11-01'];				   
+	const prazdniki = ['2026-01-01', '2026-01-02', '2026-01-03', '2026-01-04', '2026-01-05', '2026-01-06', '2026-01-07', '2026-01-08', '2026-01-09',
+			   '2025-02-23', '2025-03-08', '2025-03-09', '2025-03-20', '2025-05-01', '2025-05-09', '2025-05-11', '2025-05-27',
+			   '2025-06-12', '2025-10-11', '2025-10-12', '2025-11-04'];
+	const korotkiy = ['2025-03-19', '2025-04-30', '2025-05-08', '2025-05-26', '2025-06-11', '2025-11-03'];				   
 	const rabochiy = ['2025-11-01'];	
 	
 	function calculate(mesto, daty, id_mess, attr_mess) { 
@@ -946,3 +946,4 @@
 	function handleTouchMove(e) {if (!xDown || !yDown) return;let xUp = e.touches[0].clientX;let yUp = e.touches[0].clientY;xDiff = xDown - xUp;yDiff = yDown - yUp;}
 </script>
 </html>
+
